--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.8.1
+crispy-bootstrap4==2024.1
 dj-database-url==0.5.0
 Django==4.2.14
 django-allauth==64.1.0
+django-crispy-forms==2.3
 django-summernote==0.8.20.0
 gunicorn==20.1.0
 pillow==10.4.0
