--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.8.1
+cloudinary==1.41.0
 crispy-bootstrap4==2024.1
 dj-database-url==0.5.0
+dj3-cloudinary-storage==0.0.6
 Django==4.2.14
 django-allauth==64.1.0
 django-crispy-forms==2.3
